# poly1271

./: .gitignore  CMakeLists.txt  LICENSE  README.md
bench/: bench_poly_mac.cpp  bench_rdtsc.c  poly1305.c  poly1305.h
include/: poly1271.h
ref/: poly1271_ref.py  poly1305.c  poly1305.h
src/: poly1271.c  poly1271_avx2.c
test/: test_crossval.c  test_ct.c  test_poly1271.c  test_poly1305.c
